[gd_scene format=3 uid="uid://bp63dsvlxoj6w"]

[ext_resource type="Script" uid="uid://cl52fqbtrwchr" path="res://Scripts/Globals/scene_loader.gd" id="1_w04o2"]
[ext_resource type="FontFile" uid="uid://dv5gofkx77peh" path="res://Graphics/PlaceholderSource/Dungeon Mode Font/dungeon-mode.ttf" id="2_7vxa1"]
[ext_resource type="Texture2D" uid="uid://bqdsv0ivl8jam" path="res://Graphics/EntitySprites/RogueSprites/rogue_varient_0.tres" id="3_86pnn"]
[ext_resource type="AnimationLibrary" uid="uid://s6ntxl5p0nep" path="res://Resources/Animations/battle_entity_animations.res" id="4_ncctd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_balau"]
bg_color = Color(0.019607844, 0.019607844, 0.019607844, 0.91764706)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q37af"]
bg_color = Color(0.34470457, 0.6951066, 0.29308626, 1)

[node name="SceneLoader" type="Node2D" unique_id=370581963]
script = ExtResource("1_w04o2")

[node name="LoadingScreenLayer" type="CanvasLayer" parent="." unique_id=252031923]
layer = 9
visible = false

[node name="Control" type="Control" parent="LoadingScreenLayer" unique_id=1519203036]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="LoadingScreenLayer/Control" unique_id=2080144053]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_balau")

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreenLayer/Control" unique_id=608053904]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -27.0
offset_right = 31.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LoadingScreenLayer/Control/VBoxContainer" unique_id=1322330678]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7vxa1")
text = "Loading..."
horizontal_alignment = 1

[node name="LoadProgressBar" type="ProgressBar" parent="LoadingScreenLayer/Control/VBoxContainer" unique_id=1485868068]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7vxa1")
theme_override_styles/fill = SubResource("StyleBoxFlat_q37af")
rounded = true

[node name="Character" type="Node2D" parent="LoadingScreenLayer/Control" unique_id=1961948587]
position = Vector2(563, 233)

[node name="Sprite2D" type="Sprite2D" parent="LoadingScreenLayer/Control/Character" unique_id=1828475580]
texture_filter = 1
position = Vector2(0, 32)
scale = Vector2(2, 2)
texture = ExtResource("3_86pnn")
offset = Vector2(0, -16)
flip_h = true

[node name="CharacterAnimator" type="AnimationPlayer" parent="LoadingScreenLayer/Control/Character" unique_id=933173198]
libraries/battle_entity = ExtResource("4_ncctd")

[connection signal="animation_finished" from="LoadingScreenLayer/Control/Character/CharacterAnimator" to="LoadingScreenLayer/Control/Character/CharacterAnimator" method="_on_animation_finished"]
